--- a/App desktop/public/index.html
+++ b/App desktop/public/index.html
@@ -18,15 +18,15 @@
                     <a href="">Clavier</a>
                 </li>
                 <li><i class="fas fa-history"></i>
-                    <a href="">Historique</a>
+                    <a href="#" onclick="display()">Historique</a>
                 </li>
                 <li><i class="fas fa-id-card-alt"></i>
                     <a href="">Contacts</a>
                 </li>
             </ul>
         </div>
-        <div class="result" id="result"></div>
-        <div class="keyboard">
+        <div class="keyboard" id="keyboard">
+            <div class="result" id="result"></div>
             <div>
                 <button id="btn1">1</button>
                 <button id="btn2">2</button>
@@ -47,12 +47,25 @@
                 <button id="btn11">0</button>
                 <button id="btn12">#</button>
             </div>
-            <div><button id="call-btn" class="call-button"><i class="fas fa-phone-alt"></i></button>
+            <div class="call-delete-add">
+                <button id="call-btn" class="call-button" onclick="save()"><i class="fas fa-phone-alt"></i></button>
                 <button id="delete-btn" class="delete-button"><i class="fas fa-minus-square"></i></button>
+                <button onclick="popup()" class="button-aj">Ajouter contact</button>
+            </div>
+            <div id="contact-section" style="display: none;">
+                <p class="title">Ajouter un contact</p>
+                <div class="inp-btn">
+                    <input type="text" id="contact-inp" class="contact-inp">
+                    <button id="btn-ajout" class="btn-ajout" onclick="saveContact()">Ajouter</button>
+                </div>
             </div>
         </div>
+        <div id="historyy" display=none>
+        </div>
+        <div id="contactt" display=none></div>
     </div>
     <script src="index.js"></script>
+    <script src="../app.js"></script>
 </body>
 
 </html>
