--- a/App desktop/public/index.html
+++ b/App desktop/public/index.html
@@ -15,17 +15,17 @@
         <div>
             <ul>
                 <li><i class="fas fa-keyboard"></i>
-                    <a href="">Clavier</a>
+                    <a href="#" onclick="displayKeyboard()">Clavier</a>
                 </li>
                 <li><i class="fas fa-history"></i>
                     <a href="#" onclick="display()">Historique</a>
                 </li>
                 <li><i class="fas fa-id-card-alt"></i>
-                    <a href="">Contacts</a>
+                    <a href="#" onclick="displayContacts()">Contacts</a>
                 </li>
             </ul>
         </div>
-        <div class="keyboard" id="keyboard">
+        <div class="keyboard" id="keyboard" display="block">
             <div class="result" id="result"></div>
             <div>
                 <button id="btn1">1</button>
@@ -49,7 +49,7 @@
             </div>
             <div class="call-delete-add">
                 <button id="call-btn" class="call-button" onclick="save()"><i class="fas fa-phone-alt"></i></button>
-                <button id="delete-btn" class="delete-button"><i class="fas fa-minus-square"></i></button>
+                <!-- <button id="delete-btn" class="delete-button"><i class="fas fa-minus-square"></i></button> -->
                 <button onclick="popup()" class="button-aj">Ajouter contact</button>
             </div>
             <div id="contact-section" style="display: none;">
@@ -60,9 +60,9 @@
                 </div>
             </div>
         </div>
-        <div id="historyy" display=none>
+        <div id="historyy" display="none">
         </div>
-        <div id="contactt" display=none></div>
+        <div id="contactt" display="none"></div>
     </div>
     <script src="index.js"></script>
     <script src="../app.js"></script>
